@@ -5,8 +5,9 @@ Generic changes/fixes
 	* correct statistic value formating while two triggers are defined
 	
 Device specific changes/fixes
+	* Junsi iCHargerUSB - correct power calculation for continuous recorded data while loading from OSD
 	* Junsi DX* - correct input power values
-	* GPS-Logger3 - build offset to both pressure sensors while calculating pressure ∆TEC
+	* GPS-Logger3 - calculate offset of both pressure sensors while calculating pressure ∆TEC
 
 
 Version 3.5.1 - 25 Oct 2021
